app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import 'variables';
@import 'font-awesome';
@import "home";
@import "navbar";
@import "card";
@import "tech";

@font-face {
    font-family: 'Geist';
    src: font-url('GeistVariableVF.woff2');
    font-style: normal;
}
html {
    min-width: $screen-unreal;
    background-color: $white;
}
body{
    font-family: 'Geist', Helvetica, sans-serif; 
    font-weight: $light;
    font-size: $normal;
    width: 45rem;
    margin: 2rem auto 4rem auto;
    line-height: 1.75rem;
    // text-align: justify;
}
p{
    padding: 0;
    margin: 0;
    font-weight: $light;
}
a{
    text-decoration: none;
    color: inherit;
}
strong, b{
    font-weight: $semi-bold;
}
.semi-bold{
    font-weight: $regular;
}
hr{
    border: 0; 
    height: 2px;
    background-color: $medium-grey;
}
.link_to{
    font-weight: $regular;
    text-decoration: underline;
    text-decoration-color: $dark-grey;
}
.hey-im-rushi{
    font-weight: $regular;
    width: fit-content;
    font-size: $large;
    margin: 2rem auto;
    i {
        color: $dark-orange;
        display: inline-block;
        animation: right-to-left 0.5s ease-in-out 3;
    }
}
@keyframes right-to-left {
    0%, 100% {
        transform: rotate(0deg);
    }
    50% {
        transform: rotate(20deg);
    }
}
@media (max-width: $screen-md) {
    body{
        width: 90%;
    }
}

